fix shouldReturnEmptyListWhenNoMatchesFound